DEV: Ensure the collapsed content of quoted posts is decorated
- Refactored `blockquote` styles to include `.cooked` class adjustments for consistent padding and margin handling.
- Reintroduced conditional support for the `decorateSelectionBarrier` using a computed `shouldAddSelectionBarrier` property.
- Improved decorator management and cleanup logic in `decorateBeforeAdopt`.

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -653,6 +653,10 @@ aside.quote {
   blockquote {
     margin-top: 0;
 
+    .cooked {
+      padding: 0;
+    }
+
     .expanded-quote {
       overflow: hidden;
 
@@ -1091,12 +1095,18 @@ kbd {
 
 // we assume blockquotes have their own margins, so all blockquotes
 // will remove margins from first (top) and last (bottom) child elements
-blockquote > *:first-child {
-  margin-top: 0 !important;
+blockquote,
+blockquote .cooked {
+  > *:first-child {
+    margin-top: 0 !important;
+  }
 }
 
-blockquote > *:last-child {
-  margin-bottom: 0 !important;
+blockquote,
+blockquote .cooked {
+  > *:last-child {
+    margin-bottom: 0 !important;
+  }
 }
 
 .gap {
